[workspace]
resolver = "3"
members = [
    "busd",
    "client",
    "metrics",
    "monitor",
    "mqtt",
    "protocol",
]

[workspace.dependencies]
# project crates:
samsunghvac-busd = { path = "busd" }
samsunghvac-client = { path = "client" }
samsunghvac-metrics = { path = "metrics" }
samsunghvac-monitor = { path = "monitor" }
samsunghvac-mqtt = { path = "mqtt" }
samsunghvac-protocol = { path = "protocol" }

# external deps:
env_logger = { version = "0.11", default-features = false, features = ["humantime", "color", "auto-color"] }
heapless = "0.8"
log = "0.4"
serialport = { version = "4.7", default-features = false }
structopt = { version = "0.3", default-features = false }
thiserror = "2.0"

# optimise for size in release mode:
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"
