[package]
name = "samsung_nasa_busd"
version = "0.1.0"
edition = "2024"

[dependencies]
samsung_nasa_parser = { workspace = true }
samsung_nasa_monitor = { workspace = true }

bytes = "1.10"
futures = { version = "0.3", default-features = false }
heapless = { workspace = true }
serialport = { workspace = true }
structopt = { workspace = true }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["bytes", "io-util", "macros", "net", "rt", "sync"] }
tokio-serial = "5.4"
tokio-stream = { version = "0.1.17", default-features = false }
async-stream = "0.3.6"
env_logger = { version = "0.11.8", default-features = false, features = ["humantime", "color", "auto-color"] }
log = "0.4.27"
