[package]
name = "samsunghvac-busd"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-parser = { workspace = true }
samsunghvac-client = { workspace = true }

async-stream = "0.3"
bytes = "1.10"
env_logger = { workspace = true }
futures = { version = "0.3", default-features = false }
heapless = { workspace = true }
log = { workspace = true }
serialport = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.44", default-features = false, features = ["bytes", "io-util", "macros", "net", "rt", "sync"] }
tokio-serial = "5.4"
tokio-stream = { version = "0.1.17", default-features = false }
