[package]
name = "samsunghvac-client"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-protocol = { workspace = true }

bytes = "1.10"
futures = { version = "0.3", default-features = false }
tokio = { version = "1.44", default-features = false, features = ["bytes", "macros", "net", "rt", "sync"] }
tokio-serial = "5.4"
async-stream = "0.3"
log = { workspace = true }
thiserror = { workspace = true }

serialport = { workspace = true }
structopt = { workspace = true }
heapless = { workspace = true }
pin-project = { version = "1.1.10", default-features = false }
