[package]
name = "samsunghvac-cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-client = { workspace = true }
samsunghvac-monitor = { workspace = true }
samsunghvac-parser = { workspace = true }
serialport = { workspace = true }
structopt = { workspace = true }
heapless = { workspace = true }
