[package]
name = "samsunghvac-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-client = { workspace = true }
samsunghvac-protocol = { workspace = true }

env_logger = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.44", default-features = false, features = ["bytes", "macros", "net", "rt", "sync"] }
