[package]
name = "samsunghvac-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-client = { workspace = true }
samsunghvac-parser = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }
serialport = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.44", default-features = false, features = ["bytes", "io-util", "macros", "net", "rt", "sync"] }
