[package]
name = "samsunghvac-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-client = { workspace = true }
samsunghvac-protocol = { workspace = true }

derive_more = { version = "2.0", features = ["from_str", "deref", "deref_mut"] }
env_logger = { workspace = true }
futures = { version = "0.3", default-features = false }
log = { workspace = true }
rumqttc = { version = "0.24", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.44", default-features = false, features = ["macros", "net", "rt", "sync"] }
toml = "0.8"
