[package]
name = "samsunghvac-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
samsunghvac-client = { workspace = true }
samsunghvac-common = { workspace = true }
samsunghvac-protocol = { workspace = true }

log = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }

derive_more = { version = "2.0", features = ["from_str", "deref", "deref_mut"] }
futures = { version = "0.3", default-features = false }
rumqttc = { version = "0.24", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.44", default-features = false, features = ["macros", "net", "rt", "sync"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
