[package]
name = "samsunghvac-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0", default-features = false, features = ["debug", "display", "try_from", "into"] }
heapless = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
ux = "0.1"
